--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -15,6 +15,9 @@ on:
   pull_request:
     branches: [ "main" ]
 
+  workflow_dispatch:
+    
+
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
