--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,8 +6,8 @@ name: Docker
 # documentation.
 
 on:
-  schedule:
-    - cron: '41 11 * * *'
+  # schedule:
+  #   - cron: '41 11 * * *'
   push:
     branches: [ "main" ]
     # Publish semver tags as releases.
